added breathing content

--- a/Meditation/landing page/meditation.css
+++ b/Meditation/landing page/meditation.css
@@ -264,8 +264,8 @@ body {
 
 #btn4 {
   background-color: #1af112;
-  text-decoration: none;
 }
 #btn4 a{
+  color: black;
   text-decoration: none;
 }
