linked various pages and corrected layout

--- a/Moodify/Moodify.css
+++ b/Moodify/Moodify.css
@@ -4,6 +4,10 @@ body {
   background-color: #fff2ea;
   height: 100vh;
 }
+.btn a{
+  text-decoration: none;
+  color: black;
+}
 
 .healer {
   font-family: "Cookie", cursive !important;
@@ -87,6 +91,11 @@ body {
 #btn1 {
   background-color: #2471ff;
 }
+#btn1:hover{
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
 #b1 {
   background-color: #2471ff;
 }
@@ -111,10 +120,6 @@ body {
   margin-bottom: 5%;
   border-radius: 12px;
 }
-.btn:hover {
-  opacity: 0.9;
-}
-
 #card-2 img {
   border: 2px solid black;
   height: 33%;
@@ -130,7 +135,7 @@ body {
   background-size: 200% 200%;
   background-image: linear-gradient(to top, #ffff00 50%, transparent 50%);
   transition: background-position 300ms, color 300ms ease,
-    border-color 300ms ease;
+  border-color 300ms ease;
 }
 
 #card-2:hover {
@@ -139,10 +144,15 @@ body {
   background-image: linear-gradient(to top, #ffff00 51%, transparent 50%);
   background-position: 0 100%;
   transition: background-position 300ms, color 300ms ease,
-    border-color 300ms ease;
+  border-color 300ms ease;
 }
 #btn2 {
   background-color: #ffff00;
+}
+#btn2:hover{
+  background-color: white;
+  color: black;
+  cursor: pointer;
 }
 #b2 {
   background-color: #ffff00;
@@ -162,18 +172,23 @@ body {
   background-image: linear-gradient(to top, #ee2e39 50%, transparent 50%);
   transition: background-position 300ms, color 300ms ease,
     border-color 300ms ease;
-}
-#card-3:hover {
-  color: rgb(15, 15, 15);
+  }
+  #card-3:hover {
+    color: rgb(15, 15, 15);
   border-color: #ee2e39;
   background-image: linear-gradient(to top, #ee2e39 51%, transparent 50%);
   background-position: 0 100%;
   transition: background-position 300ms, color 300ms ease,
-    border-color 300ms ease;
+  border-color 300ms ease;
 }
 #b3 {
   background-color: #ee2e39;
 }
 #btn3 {
   background-color: #ee2e39;
+}
+#btn3:hover{
+  background-color: white;
+  color: black;
+  cursor: pointer;
 }
