--- a/Visualization/Visualization.css
+++ b/Visualization/Visualization.css
@@ -12,6 +12,11 @@ body {
     font-size: 1.5rem;
     margin-right: 1%;
   }
+
+.healer a
+{
+   text-decoration:none;
+}
   
   .navbar {
     position: fixed;
