--- a/Meditation/landing page/meditation.css
+++ b/Meditation/landing page/meditation.css
@@ -293,4 +293,17 @@ body {
   text-decoration: none;
 }
 
+#btn1 a{
+  color: black;
+  text-decoration: none;
+}
+#btn2 a{
+  color: black;
+  text-decoration: none;
+}
+#btn3 a{
+  color: black;
+  text-decoration: none;
+}
+
 
